`Stream.toList` is not supported in Java 11. AB#2122038, AB#2122059